fixed menubar issue being cut off

--- a/assets/scss/base/djaodjin-dashboard.scss
+++ b/assets/scss/base/djaodjin-dashboard.scss
@@ -107,7 +107,6 @@ $dashboard-content-bg:       white;
 }
 
 .dashboard-content {
-    overflow: hidden;
     vertical-align: top;
     background-color: $dashboard-content-bg;
     color: black;
